--- a/css/main.css
+++ b/css/main.css
@@ -13,3 +13,32 @@ html {
   text-size-adjust: 100%;
   font-family: sans-serif;
 }
+
+body {
+  margin: 0;
+  padding: 0;
+}
+
+header {
+  display: inline-block;
+  background-color: #e2e2e2;
+  text-align: center;
+  width: 100%;
+  padding: 0;
+}
+
+li {
+  list-style-type: none;
+  display: inline-block;
+}
+
+li * {
+  text-decoration: none;
+  color: #0074d9;
+  text-align: left;
+}
+
+li a:hover {
+  background-color: #0074d9;
+  color: #fff;
+}
