--- a/css/main.css
+++ b/css/main.css
@@ -14,6 +14,10 @@ html {
   font-family: sans-serif;
 }
 
+*, *::before, *::after {
+  box-sizing: inherit;
+}
+
 body {
   margin: 0;
   padding: 0;
@@ -32,7 +36,7 @@ li {
   display: inline-block;
 }
 
-li * {
+li a {
   text-decoration: none;
   color: #0074d9;
   text-align: left;
